Feature#98089-[06] Client application